2010-01-04  Jon Honeycutt  <jhoneycutt@apple.com>

        MSAA: <select> elements should broadcast value change events

        https://bugs.webkit.org/show_bug.cgi?id=33088

        <rdar://problem/7332364>

        Reviewed by Darin Adler.

        * platform/win/accessibility/select-element-valuechange-event-expected.txt: Added.
        * platform/win/accessibility/select-element-valuechange-event.html: Added.

2010-01-04  Darin Adler  <darin@apple.com>

        Reviewed by Sam Weinig.

        Added test for use of BarInfo object after a frame is no longer
        associated with a web page.

        * fast/dom/Window/BarInfo-after-frame-removed-expected.txt: Added.
        * fast/dom/Window/BarInfo-after-frame-removed.html: Added.

2010-01-04  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dan Bernstein.

        Repaint issues in text input under a scale transform
        https://bugs.webkit.org/show_bug.cgi?id=32086
        
        Test for repaint after a subtree layout inside a transformed element.

        * fast/repaint/subtree-layoutstate-transform.html: Added.
        * platform/mac/fast/repaint/subtree-layoutstate-transform-expected.checksum: Added.
        * platform/mac/fast/repaint/subtree-layoutstate-transform-expected.png: Added.
        * platform/mac/fast/repaint/subtree-layoutstate-transform-expected.txt: Added.

2010-01-04  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Reentrancy problem with selection in some edge cases. 
        https://bugs.webkit.org/show_bug.cgi?id=32842 
        rdar://problem/7449974 

        * fast/forms/selection-layout-reentry-strange-case-expected.txt: Added.
        * fast/forms/selection-layout-reentry-strange-case.html: Added.
        * platform/mac/accessibility/frame-with-title-expected.txt: Updated since 
        the number of layouts is now different. 

2010-01-04  Dmitry Titov  <dimich@chromium.org>
