@@ -1,0 +1,6 @@
+This tests that select elements have the correct role.
+
+
+
+PASS accessibilityController.focusedElement.role is "combo box"
+
